--- a/index.html
+++ b/index.html
@@ -92,10 +92,58 @@
               <a class="mobile-menu-set__link link" href="#">Контакти</a>
             </li>
           </ul>
+
+          <ul class="mobile-contacts list">
+            <li>
+              <a
+                class="mobile-contacts-tel link"
+                href="tel:+380961111111"
+                target="_blank"
+                rel="noopener noreferrer nofollow">
+                +38 096 111 11 11
+              </a>
+            </li>
+
+            <li>
+              <a
+                class="mobile-contacts-email link"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener noreferrer nofollow">
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+
+          <ul class="mobile-social-list list">
+                  <li class="mobile-social-list__item">
+                    <a href="" class="mobile-social-list__link">
+                      <span class="mobile-social-list__name">Instagram</span>
+                    </a>
+                  </li>
+                  <li class="mobile-social-list__item">
+                    <a href="" class="mobile-social-list__link">
+                      <span class="mobile-social-list__name">Twitter</span>
+                    </a>
+                  </li>
+                  <li class="mobile-social-list__item">
+                    <a href="" class="mobile-social-list__link">
+                      <span class="mobile-social-list__name">Facebook</span>
+                    </a>
+                  </li>
+                  <li class="mobile-social-list__item">
+                    <a href="" class="mobile-social-list__link">
+                      <span class="mobile-social-list__name">Linkedin</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            
+
         </div>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="hero-section hero-overlay">
         <div class="container">
           <h1 class="hero-section__title">
@@ -695,9 +743,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
-    <footer class="footer-section">
+    <!-- <footer class="footer-section">
       <div class="container">
         <div class="address-container">
           <div>
@@ -808,9 +856,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-modal-btn" data-modal-close>
           <svg class="close-modal-btn__icon" width="18" height="18">
@@ -891,6 +939,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
-    <script src="./js/menu.js"></script>
+    <script src="./js/menu.js"></script> -->
   </body>
 </html>
