--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
   </head>
+
   <body>
     <header class="page-header">
       <div class="container page-header__container">
         <nav class="page-navigation">
-          <a class="logo link page-navigation__logo" href="./index.html">
+          <a class="logo page-navigation__logo link" href="./index.html">
             <span class="logo__first-part-logo">Web</span
             ><span class="logo__second-part-logo">Studio </span>
           </a>
@@ -36,13 +36,13 @@
             </li>
           </ul>
         </nav>
-        <button type="button" class="open-mobile-menu-btn" data-menu-open>
+        <button type="button" class="open-mobile-menu-btn js-open-menu">
           <svg class="open-mobile-menu-btn__icon">
             <use href="./images/sprite.svg#icon-burger"></use>
           </svg>
         </button>
         <ul class="contact list">
-          <li>
+          <li class="contact__item">
             <a
               class="contact-mail link"
               href="mailto:info@devstudio.com"
@@ -55,7 +55,7 @@
               info@devstudio.com
             </a>
           </li>
-          <li>
+          <li class="contact__item">
             <a
               class="contact-tel link"
               href="tel:+380961111111"
@@ -70,80 +70,84 @@
           </li>
         </ul>
       </div>
-      <div class="mobile-menu" data-menu>
+      <div class="mobile-menu js-menu-container">
         <div class="container mobile-menu__container">
-          <button class="mobile-menu__close-btn" data-menu-close>
+          <button class="mobile-menu__close-btn js-close-menu">
             <svg class="mobile-menu__close-icon">
               <use href="./images/sprite.svg#icon-close"></use>
             </svg>
           </button>
-          <ul class="mobile-menu-set list">
-            <li>
-              <a class="mobile-menu-set__link link current" href="./index.html"
-                >Студія</a
-              >
-            </li>
-            <li>
-              <a class="mobile-menu-set__link link" href="./portfolio.html"
-                >Портфоліо</a
-              >
-            </li>
-            <li>
-              <a class="mobile-menu-set__link link" href="#">Контакти</a>
-            </li>
-          </ul>
+          <div class="mobile-menu-section">
+            <ul class="mobile-menu-set list">
+              <li class="mobile-menu-set__item">
+                <a
+                  class="mobile-menu-set__link link current"
+                  href="./index.html"
+                  >Студія</a
+                >
+              </li>
+              <li class="mobile-menu-set__item">
+                <a class="mobile-menu-set__link link" href="./portfolio.html"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="mobile-menu-set__item">
+                <a class="mobile-menu-set__link link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <div class="mobile-menu-contacts-section">
+            <ul class="mobile-contacts list">
+              <li class="mobile-contacts__item">
+                <a
+                  class="mobile-contacts-tel link"
+                  href="tel:+380961111111"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow">
+                  +38 096 111 11 11
+                </a>
+              </li>
 
-          <ul class="mobile-contacts list">
-            <li>
-              <a
-                class="mobile-contacts-tel link"
-                href="tel:+380961111111"
-                target="_blank"
-                rel="noopener noreferrer nofollow">
-                +38 096 111 11 11
-              </a>
-            </li>
-
-            <li>
-              <a
-                class="mobile-contacts-email link"
-                href="mailto:info@devstudio.com"
-                target="_blank"
-                rel="noopener noreferrer nofollow">
-                info@devstudio.com
-              </a>
-            </li>
-          </ul>
-
-          <ul class="mobile-social-list list">
-                  <li class="mobile-social-list__item">
-                    <a href="" class="mobile-social-list__link">
-                      <span class="mobile-social-list__name">Instagram</span>
-                    </a>
-                  </li>
-                  <li class="mobile-social-list__item">
-                    <a href="" class="mobile-social-list__link">
-                      <span class="mobile-social-list__name">Twitter</span>
-                    </a>
-                  </li>
-                  <li class="mobile-social-list__item">
-                    <a href="" class="mobile-social-list__link">
-                      <span class="mobile-social-list__name">Facebook</span>
-                    </a>
-                  </li>
-                  <li class="mobile-social-list__item">
-                    <a href="" class="mobile-social-list__link">
-                      <span class="mobile-social-list__name">Linkedin</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            
-
+              <li class="mobile-contacts__item">
+                <a
+                  class="mobile-contacts-email link"
+                  href="mailto:info@devstudio.com"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow">
+                  info@devstudio.com
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="mobile-social-list-section">
+            <ul class="mobile-social-list list">
+              <li class="mobile-social-list__item">
+                <a href="" class="mobile-social-list__link link">
+                  <span class="mobile-social-list__name">Instagram</span>
+                </a>
+              </li>
+              <li class="mobile-social-list__item">
+                <a href="" class="mobile-social-list__link link">
+                  <span class="mobile-social-list__name">Twitter</span>
+                </a>
+              </li>
+              <li class="mobile-social-list__item">
+                <a href="" class="mobile-social-list__link link">
+                  <span class="mobile-social-list__name">Facebook</span>
+                </a>
+              </li>
+              <li class="mobile-social-list__item">
+                <a href="" class="mobile-social-list__link link">
+                  <span class="mobile-social-list__name">Linkedin</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
-    <!-- <main>
+    <main>
+      <!-- Hero -->
       <section class="hero-section hero-overlay">
         <div class="container">
           <h1 class="hero-section__title">
@@ -154,7 +158,9 @@
           </button>
         </div>
       </section>
-      <section class="advantages-section">
+
+      <!-- Advantages  -->
+      <section class="advantages-section section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="feature list">
@@ -228,6 +234,8 @@
           </ul>
         </div>
       </section>
+
+      <!-- About -->
       <section class="section about-section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
@@ -259,6 +267,8 @@
           </ul>
         </div>
       </section>
+
+      <!-- Team -->
       <section class="team-section section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
@@ -266,7 +276,7 @@
           <ul class="team-list list">
             <li class="team-list__item">
               <div class="team-member">
-                <picture>
+                <picture class="team-member-img">
                   <source
                     srcset="
                       ./images/team1-desktop.webp    1x,
@@ -664,6 +674,8 @@
         </div>
       </section>
 
+      <!-- Clients section -->
+
       <section class="clients-section section">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
@@ -743,9 +755,11 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
 
-    <!-- <footer class="footer-section">
+    <!-- Footer -->
+
+    <footer class="footer-section">
       <div class="container">
         <div class="address-container">
           <div>
@@ -856,9 +870,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
-
-    <!-- <div class="backdrop is-hidden" data-modal>
+    </footer>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-modal-btn" data-modal-close>
           <svg class="close-modal-btn__icon" width="18" height="18">
@@ -881,7 +894,6 @@
               </svg>
             </span>
           </label>
-
           <label class="modal-form__label">
             <span class="modal-form__text">Телефон</span>
             <span class="modal-form__wrapper">
@@ -939,6 +951,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
-    <script src="./js/menu.js"></script> -->
+    <script src="./js/menu.js"></script>
   </body>
 </html>
