--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
     <footer class="footer-section">
       <div class="container">
         <div class="address-container">
-          <div>
+          <div class="address-box">
             <a class="logo link" href="./index.html">
               <span class="logo__first-part-logo">Web</span
               ><span class="footer-section__logo">Studio </span>
@@ -850,15 +850,14 @@
                 >Підпишіться на розсилку</strong
               >
               <span class="subscribe-form__field">
-                <label class="subscribe-form__label"></label>
-
-                <input
-                  type="email"
-                  name="user-email"
-                  placeholder="E-mail"
-                  class="subscribe-form__input"
-                  required />
-
+                <label class="subscribe-form__label">
+                  <input
+                    type="email"
+                    name="user-email"
+                    placeholder="E-mail"
+                    class="subscribe-form__input"
+                    required />
+                </label>
                 <button type="submit" class="subscribe-btn">
                   Підписатися
                   <svg class="subscribe-btn__icon" width="24" height="24">
