--- a/index.html
+++ b/index.html
@@ -308,20 +308,20 @@
 
                   <source
                     srcset="
-                      ./images/team1-mobile.webp    1x,
-                      ./images/team1-mobile@2x.webp 2x
+                      ./images/mobile/team1@1x.webp 1x,
+                      ./images/mobile/team1@2x.webp 2x
                     "
                     media="(max-width: 767px)"
                     type="image/webp" />
                   <source
                     srcset="
-                      ./images/team1-mobile.jpg    1x,
-                      ./images/team1-mobile@2x.jpg 2x
+                      ./images/mobile/team1@1x.jpg 1x,
+                      ./images/mobile/team1@2x.jpg 2x
                     "
                     media="(max-width: 767px)" />
 
                   <img
-                    src="./images/team1-mobile.jpg"
+                    src="./images/mobile/team1@1x.jpg"
                     alt="чоловік у коричневій сорочці"
                     class="team-img" />
                 </picture>
@@ -378,51 +378,6 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/team-image/product-designer-desktop.webp    1x,
-                      ./images/team-image/product-designer-desktop@2x.webp 2x
-                    "
-                    media="(min-width: 1200px)"
-                    type="image/webp" />
-                  <source
-                    srcset="
-                      ./images/team-image/product-designer-desktop.jpg    1x,
-                      ./images/team-image/product-designer-desktop@2x.jpg 2x
-                    "
-                    media="(min-width: 1200px)" />
-                  <source
-                    srcset="
-                      ./images/team-image/product-designer-tablet.webp    1x,
-                      ./images/team-image/product-designer-tablet@2x.webp 2x
-                    "
-                    media="(min-width: 768px)"
-                    type="image/webp" />
-                  <source
-                    srcset="
-                      ./images/team-image/product-designer-tablet.jpg    1x,
-                      ./images/team-image/product-designer-tablet@2x.jpg 2x
-                    "
-                    media="(min-width: 768px)" />
-                  <source
-                    srcset="
-                      ./images/team1-mobile.webp    1x,
-                      ./images/team1-mobile@2x.webp 2x
-                    "
-                    media="(max-width: 767px)"
-                    type="image/webp" />
-                  <source
-                    srcset="
-                      ./images/team1-mobile.jpg    1x,
-                      ./images/team1-mobile@2x.jpg 2x
-                    "
-                    media="(max-width: 767px)" />
-                  <img
-                    class="image"
-                    src="./images/team1-mobile.jpg"
-                    alt="дизайнер продукту" />
-                </picture>
-                <!-- <picture>
-                  <source
-                    srcset="
                       ./images/team2-desktop.webp    1x,
                       ./images/team2-desktop@2x.webp 2x
                     "
@@ -452,22 +407,22 @@
 
                   <source
                     srcset="
-                      ./images/team2-mobile.webp    1x,
-                      ./images/team2-mobile@2x.webp 2x
+                      ./images/mobile/team2@1x.webp 1x,
+                      ./images/mobile/team2@2x.webp 2x
                     "
                     media="(max-width: 767px)"
                     type="image/webp" />
                   <source
                     srcset="
-                      ./images/team2-mobile.jpg    1x,
-                      ./images/team2-mobile@2x.jpg 2x
+                      ./images/mobile/team2@1x.jpg 1x,
+                      ./images/mobile/team2@2x.jpg 2x
                     "
                     media="(max-width: 767px)" />
                   <img
-                    src="./images/team2-mobile.jpg"
+                    src="./images/mobile/team2@1x.jpg"
                     alt="жінка у чорному піджаку"
                     class="team-img" />
-                </picture> -->
+                </picture>
               </div>
               <div class="team-member__meta">
                 <h3 class="team-member__name">Ольга Рєпіна</h3>
